[package]
name = "gmt_dos-clients_domeseeing"
version = "2.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS Domeseeing Client"
documentation = "https://docs.rs/gmt_dos-clients_domeseeing"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
interface.workspace = true
glob = "0.3.0"
bincode = "1.3.3"
log.workspace = true
serde = { version = "1.0.145", features = ["derive"] }
thiserror.workspace = true
gmt_dos-clients_io.workspace = true
