[package]
name = "gmt_dos-clients_fem"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS FEM Client"
documentation = "https://docs.rs/gmt_dos-clients_fem"
readme = "../README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
gmt_dos-clients = { workspace = true, features = ["interface"] }
gmt_dos-clients_io.workspace = true
gmt-fem.workspace = true
log.workspace = true
rayon = "1.6.1"
nalgebra.workspace = true
num-complex = "0.4.3"
serde-pickle = "1.1.1"
clap = { version = "4.1.1", features = ["derive"], optional = true }
thiserror.workspace = true
serde = { version = "1.0.152", features = ["derive"] }

[features]
fsm = []
asm = []

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "cargo-gmt-fem"
path = "src/bin/inspect.rs"
required-features = ["clap"]
