[package]
name = "gmt_dos-clients_fem"
version = "2.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS FEM Client"
documentation = "https://docs.rs/gmt_dos-clients_fem"
readme = "../README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true
build = "build/build.rs"

[dependencies]
gmt_dos-clients = { workspace = true, features = ["interface"] }
gmt_dos-clients_io.workspace = true
gmt-fem.workspace = true
log.workspace = true
rayon = "1.6.1"
nalgebra.workspace = true
num-complex = "0.4.3"
serde-pickle = "1.1.1"
clap = { version = "4.1.1", features = ["derive"], optional = true }
thiserror.workspace = true
serde = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }

[build-dependencies]
anyhow.workspace = true
apache-arrow.workspace = true
parquet.workspace = true
thiserror.workspace = true
zip.workspace = true
bytes.workspace = true

[features]
fsm = []
asm = []
serde = ["dep:serde", "gmt-fem/serde", "bincode", "nalgebra/serde-serialize"]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
serde_json = "1.0.96"

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "cargo-gmt-fem"
path = "src/bin/inspect.rs"
required-features = ["clap"]
