[package]
name = "gmt_dos-clients_fem"
version = "5.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS FEM Client"
documentation = "https://docs.rs/gmt_dos-clients_fem"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
interface.workspace = true
gmt_dos-clients.workspace = true
gmt_dos-clients_io.workspace = true
gmt-fem.workspace = true
log.workspace = true
rayon = "1.6.1"
nalgebra = { workspace = true }
num-complex = "0.4.3"
serde-pickle = "1.1.1"
clap = { version = "4.1.1", features = ["derive"], optional = true }
thiserror.workspace = true
serde = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
anyhow.workspace = true
geotrans = "0.2.2"
toml = {version = "0.8.19", optional = true}
faer.workspace = true
faer-ext.workspace = true
fem-cuda-solver = { version = "0.1.0", path = "fem-cuda-solver", optional = true}

[build-dependencies]
anyhow.workspace = true
apache-arrow.workspace = true
parquet.workspace = true
thiserror.workspace = true
zip.workspace = true
bytes.workspace = true
gmt-fem-code-builder.workspace = true

[features]
serde = [
    "dep:serde",
    "interface/filing",
    "gmt-fem/serde",
    "bincode/serde",
    "nalgebra/serde-serialize",
]
cuda = ["dep:fem-cuda-solver"]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
matio-rs = { workspace = true, features = ["nalgebra"] }
serde_json = "1.0.96"

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "cargo-gmt-fem"
path = "src/bin/inspect.rs"
required-features = ["clap"]

[[bin]]
name = "static_gain"
path = "src/bin/static_gain.rs"
required-features = ["serde", "clap", "toml"]

[[bin]]
name = "mirror_singular_modes"
path = "src/bin/mirror_singular_modes.rs"
required-features = ["serde", "clap"]

[package.metadata.docs.rs]
all-features = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(fem)',
    'cfg(cfd)',
    'cfg(mount)',
    'cfg(m1)',
    'cfg(m2)',
    'cfg(topend,values("FSM","ASM"))',
    'cfg(m2_rbm,values("MCM2Lcl","MCM2Lcl6D"))',
    'cfg(ground_acceleration)'
] }
