[package]
name = "gmt_dos-clients"
version = "2.3.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Giant Magellan Telescope Dynamic Optical Simulation Actor Clients"
documentation = "https://docs.rs/gmt_dos-clients"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
thiserror.workspace = true
rand = { version = "0.8.5", optional = true }
rand_distr = { version = "0.4.3", optional = true }
paris = { version = "1.5.13", optional = true }
log = { workspace = true, optional = true }
dos-uid-derive = { workspace = true, optional = true }
matio-rs = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }
nalgebra = { workspace = true, optional = true }
num-traits = { version = "0.2.15", optional = true }
bincode = { workspace = true, optional = true }

[features]
default = ["clients"]
clients = ["interface", "indicatif"]
noise = ["rand", "rand_distr"]
interface = ["paris", "log", "dos-uid-derive"]
nalgebra = ["dep:nalgebra", "num-traits"]

[package.metadata.docs.rs]
all-features = true
