[package]
name = "gmt_dos-clients_io"
version = "2.6.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS Inputs/Outputs"
documentation = "https://docs.rs/gmt_dos-clients_io"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
gmt_dos-actors = { workspace = true }
gmt_dos-clients = { workspace = true, features = ["interface"] }

[build-dependencies]
anyhow.workspace = true
gmt-fem-code-builder.workspace = true
