[package]
name = "gmt_dos-clients_io"
version = "3.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS Inputs/Outputs"
documentation = "https://docs.rs/gmt_dos-clients_io"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
gmt_dos-actors.workspace = true
interface.workspace = true

[build-dependencies]
anyhow.workspace = true
gmt-fem-code-builder.workspace = true
