[package]
name = "gmt_dos-clients_lom"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS LOM Client"
documentation = "https://docs.rs/gmt_dos-clients_lom"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
interface.workspace = true
gmt_dos-clients_io.workspace = true
nalgebra.workspace = true
gmt-lom = "2.1.0"
flate2 = "1.0.26"
