[package]
name = "gmt_dos-clients_m1-ctrl"
version = "1.0.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS M1 Control Client"
documentation = "https://docs.rs/gmt_dos-clients_m1-ctrl"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
center = { version = "0.1.1", package = "gmt_m1-ctrl_center-actuators" }
hardpoints-dynamics = { version = "0.1.1", package = "gmt_m1-ctrl_hardpoints-dynamics" }
outer = { version = "0.1.1", package = "gmt_m1-ctrl_outer-actuators" }
gmt_dos-actors.workspace = true
gmt_dos-clients.workspace = true
gmt_dos-clients_io.workspace = true
gmt_dos-clients_fem.workspace = true
nalgebra.workspace = true
gmt-fem.workspace = true
anyhow.workspace = true
log.workspace = true
serde = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }

[dev-dependencies]
matio-rs = { workspace = true, features = ["nalgebra"] }
tokio = { workspace = true, features = ["full"] }
env_logger.workspace = true
gmt_dos-actors.workspace = true
gmt_dos-clients.workspace = true
gmt_dos-clients_io.workspace = true
gmt_dos-clients_mount = { workspace = true, features = ["s8000d002ze30"] }
gmt_dos-clients_fem.workspace = true
gmt_dos-clients_arrow.workspace = true
anyhow.workspace = true
skyangle.workspace = true
gmt-fem.workspace = true
lom = { version = "1.1.0", package = "gmt-lom", features = ["main"] }

[features]
serde = ["dep:serde", "bincode", "nalgebra/serde-serialize"]

[package.metadata.docs.rs]
all-features = true
