[package]
name = "gmt_dos-clients_m1-ctrl"
version = "4.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS M1 Control Client"
documentation = "https://docs.rs/gmt_dos-clients_m1-ctrl"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
center = { version = "0.2.1", package = "gmt_m1-ctrl_center-actuators" }
hardpoints-dynamics = { version = "0.2.1", package = "gmt_m1-ctrl_hardpoints-dynamics" }
outer = { version = "0.2.1", package = "gmt_m1-ctrl_outer-actuators" }
gmt_dos-actors = { workspace = true, features = ["serde"] }
gmt_dos-clients = { workspace = true, features = ["serde"] }
interface.workspace = true
gmt_dos-clients_io.workspace = true
gmt_dos-clients_fem.workspace = true
nalgebra = { workspace = true, features = ["serde", "serde-serialize"] }
gmt-fem.workspace = true
anyhow.workspace = true
log.workspace = true
serde.workspace = true
bincode = { workspace = true, optional = true }
async-trait = "0.1.77"

[dev-dependencies]
matio-rs = { workspace = true, features = ["nalgebra"] }
tokio = { workspace = true, features = ["full"] }
env_logger.workspace = true
gmt_dos-actors = { workspace = true, features = ["serde"] }
gmt_dos-clients = { workspace = true, default-features = true }
gmt_dos-clients_io.workspace = true
gmt_dos-clients_mount.workspace = true
gmt_dos-clients_fem.workspace = true
gmt_dos-clients_arrow.workspace = true
anyhow.workspace = true
skyangle.workspace = true
gmt-fem.workspace = true
lom = { version = "2.2.1", package = "gmt-lom", features = ["main"] }
tokio-test.workspace = true
gmt_dos-clients_scope = { workspace = true, features = ["server"] }
gmt_dos-clients_scope-client.workspace = true

[features]
serde = ["bincode/serde", "nalgebra/serde-serialize"]

[package.metadata.docs.rs]
features = ["serde"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fem)'] }
