[package]
name = "gmt_dos-clients_m2-ctrl"
version = "1.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS M2 Control Client"
documentation = "https://docs.rs/gmt_dos-clients_m2-ctrl"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
gmt_m2-ctrl_asm_preshape-filter = "0.1.2"
gmt_m2-ctrl_asm_pid-damping = "0.1.3"
gmt_dos-actors.workspace = true
gmt_dos-clients = { workspace = true, features = ["matio-rs"] }
gmt_dos-clients_io.workspace = true
gmt_dos-clients_fem = { workspace = true, features = ["asm"] }
gmt-fem.workspace = true
rayon.workspace = true
nalgebra = { workspace = true }
log.workspace = true
anyhow.workspace = true
matio-rs = { workspace = true, features = ["nalgebra"] }
thiserror.workspace = true
paste = "1.0.12"
serde = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
env_logger.workspace = true
nanorand.workspace = true
gmt_dos-actors.workspace = true
gmt_dos-clients = { workspace = true, features = ["clients"] }
gmt_dos-clients_io.workspace = true
gmt_dos-clients_mount = { workspace = true, features = ["s8000d002ze30"] }
gmt_dos-clients_m1-ctrl.workspace = true
gmt_dos-clients_fem = { workspace = true, features = ["serde"] }
gmt_dos-clients_arrow.workspace = true
anyhow.workspace = true
skyangle.workspace = true
gmt-fem.workspace = true
lom = { version = "1.1.0", package = "gmt-lom", features = ["main"] }

[features]
serde = ["dep:serde", "bincode", "nalgebra/serde-serialize"]

[package.metadata.docs.rs]
all-features = true
