[package]
name = "gmt_dos-clients_m2-ctrl"
version = "3.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS M2 Control Client"
documentation = "https://docs.rs/gmt_dos-clients_m2-ctrl"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
gmt_m2-ctrl_asm_preshape-filter = "0.2.1"
gmt_m2-ctrl_asm_pid-damping = "0.2.1"
gmt_m2-ctrl_asm_positionner = "0.2.1"
gmt_dos-actors = { workspace = true, features = ["serde"] }
gmt_dos-clients = { workspace = true, features = ["matio-rs"] }
interface.workspace = true
gmt_dos-clients_io.workspace = true
gmt_dos-clients_fem = { workspace = true }
gmt-fem.workspace = true
rayon.workspace = true
nalgebra = { workspace = true, features = ["serde-serialize"] }
log.workspace = true
anyhow.workspace = true
matio-rs = { workspace = true, features = ["nalgebra"] }
thiserror.workspace = true
paste = "1.0.12"
serde.workspace = true
bincode = { workspace = true, optional = true }
polars = { version = "0.35.4", features = ["parquet"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
env_logger.workspace = true
nanorand.workspace = true
gmt_dos-actors.workspace = true
gmt_dos-clients = { workspace = true }
gmt_dos-clients_io.workspace = true
gmt_dos-clients_mount.workspace = true
gmt_dos-clients_m1-ctrl = { workspace = true, features = ["serde"] }
gmt_dos-clients_fem = { workspace = true, features = ["serde"] }
gmt_dos-clients_arrow.workspace = true
anyhow.workspace = true
skyangle.workspace = true
gmt-fem.workspace = true
lom = { version = "1.1.0", package = "gmt-lom", features = ["main"] }
serde-pickle = "1.1.1"
gmt_dos-clients_lom.workspace = true

[features]
serde = ["bincode/serde", "nalgebra/serde-serialize"]

[build-dependencies]
gmt-fem-code-builder.workspace = true

[package.metadata.docs.rs]
all-features = true
