[package]
name = "gmt_dos-clients_mount"
version = "2.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS Mount Control Client"
documentation = "https://docs.rs/gmt_dos-clients_mount"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
gmt_dos-actors.workspace = true
gmt_dos-clients = { workspace = true, features = ["interface"] }
gmt_dos-clients_io.workspace = true
gmt_dos-clients_fem.workspace = true
gmt_dos-clients_arrow.workspace = true
log.workspace = true
mount-ctrl = { version = "2.1.0", package = "gmt_mount-ctrl", optional = true }
thiserror.workspace = true
anyhow.workspace = true
gmt_mount-ctrl_driver = { version = "0.0.2", optional = true }
gmt_mount-ctrl_controller = { version = "0.1.0", optional = true }

[features]
default = ["mount-fdr"]
s8000d002ze60 = ["mount-ctrl/s8000d002ze60"]
s1000d002ze00 = ["mount-ctrl/s1000d002ze00"]
s1000d002ze30 = ["mount-ctrl/s1000d002ze30"]
s1000d002ze60 = ["mount-ctrl/s1000d002ze60"]
s8000d0005 = ["mount-ctrl/s8000d0005"]
s8000d002ze00 = ["mount-ctrl/s8000d002ze00"]
s8000d002ze30 = ["mount-ctrl/s8000d002ze30"]
mount-fdr = ["gmt_mount-ctrl_driver", "gmt_mount-ctrl_controller"]

[dev-dependencies]
gmt_dos-actors.workspace = true
skyangle = "0.2.2"
tokio = { workspace = true, features = ["full"] }
tokio-test.workspace = true
anyhow.workspace = true
gmt-fem.workspace = true
gmt-lom = { version = "2.1.0", features = ["main"] }
gmt_dos-clients_fem.workspace = true
gmt_dos-clients = { workspace = true, features = ["clients"] }
env_logger.workspace = true
matio-rs = { workspace = true, features = ["nalgebra"] }

[build-dependencies]
gmt-fem-code-builder.workspace = true
