[package]
name = "gmt_dos-clients_mount"
version = "4.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS Mount Control Client"
documentation = "https://docs.rs/gmt_dos-clients_mount"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
gmt_dos-actors.workspace = true
interface.workspace = true
gmt_dos-clients_io.workspace = true
gmt_dos-clients_fem.workspace = true
gmt_dos-clients_arrow.workspace = true
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
gmt_mount-ctrl_driver = { version = "1.0.0" }
gmt_mount-ctrl_controller = { version = "1.0.0" }
serde.workspace = true


[dev-dependencies]
gmt_dos-actors.workspace = true
skyangle = "0.2.2"
tokio = { workspace = true, features = ["full"] }
tokio-test.workspace = true
anyhow.workspace = true
gmt-fem.workspace = true
gmt-lom = { version = "2.1.0", features = ["main"] }
gmt_dos-clients_fem.workspace = true
gmt_dos-clients = { workspace = true }
env_logger.workspace = true
matio-rs = { workspace = true, features = ["nalgebra"] }
gmt_dos-clients_transceiver.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde_json = "1.0.114"

[build-dependencies]
gmt-fem-code-builder.workspace = true
