[package]
name = "gmt_dos-clients_scope"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS Scope Client"
documentation = "https://docs.rs/gmt_dos-clients_scope"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
eframe = "0.22.0"
flume.workspace = true
gmt_dos-actors.workspace = true
gmt_dos-clients = { workspace = true, features = ["noise"] }
gmt_dos-clients_transceiver.workspace = true
rand_distr = "0.4.3"
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true

[dev-dependencies]
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow.workspace = true
