[package]
name = "gmt_dos-clients_scope"
version = "2.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS Scope Client"
documentation = "https://docs.rs/gmt_dos-clients_scope"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
eframe = { version = "0.22.0", optional = true }
flume = { workspace = true, optional = true }
gmt_dos-actors = { workspace = true, optional = true }
interface.workspace = true
gmt_dos-clients_transceiver.workspace = true
serde = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"], optional = true }
tracing.workspace = true
gmt_dos-clients_scope-macros = { version = "0.4.0", path = "macros", optional = true }
colorous = { version = "1.0.12", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow.workspace = true
rand_distr = "0.4.3"
gmt_dos-actors.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
gmt_dos-clients = { workspace = true, features = ["noise"] }

[features]
# default = ["client"]
client = [
    "eframe",
    "flume",
    "gmt_dos-actors",
    "tokio",
    "gmt_dos-clients_scope-macros",
    "colorous",
]
server = []
compress = ["gmt_dos-clients_transceiver/flate2"]

[package.metadata."docs.rs"]
all-features = true
