[package]
name = "gmt_dos-clients_servos"
version = "2.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS Servo-Mechanisms Client"
documentation = "https://docs.rs/gmt_dos-clients_servos"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
gmt-fem.workspace = true
gmt_dos-actors = { workspace = true, features = ["filing"] }
gmt_dos-clients = { workspace = true }
gmt_dos-clients_arrow = { workspace = true }
gmt_dos-clients_fem = { workspace = true, features = ["serde"] }
gmt_dos-clients_io.workspace = true
gmt_dos-clients_m1-ctrl.workspace = true
gmt_dos-clients_m2-ctrl.workspace = true
gmt_dos-clients_mount.workspace = true
interface = { workspace = true, features = ["filing"] }
log.workspace = true
matio-rs = { workspace = true, features = ["nalgebra"] }
nalgebra.workspace = true
rayon.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
complot = "0.3.4"
# crseo = { workspace = true, optional = true }
env_logger.workspace = true
# gmt_dos-clients_crseo.workspace = true
interface.workspace = true
