[package]
name = "gmt_dos-clients_transceiver"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS Transmitter/Receiver Clients"
documentation = "https://docs.rs/gmt_dos-clients_transceiver"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
bincode = { workspace = true, features = ["serde"] }
flume.workspace = true
futures = "0.3.28"
gmt_dos-clients = { workspace = true, features = ["clients", "serde"] }
quinn = "0.10.1"
rcgen = "0.11.1"
rustls = { version = "0.21.5" }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
env_logger.workspace = true
gmt_dos-actors.workspace = true
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
