[package]
name = "gmt_dos-clients_transceiver"
version = "2.0.3"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS Transmitter/Receiver Clients"
documentation = "https://docs.rs/gmt_dos-clients_transceiver"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
interface = { workspace = true, features = ["serde"] }
bincode = { workspace = true, features = ["serde"] }
flume.workspace = true
futures = "0.3.28"
quinn = "0.10.1"
rcgen = "0.11.1"
rustls = { version = "0.21.5" }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
anyhow.workspace = true
humantime = "2.1.0"
bytesize = "1.2.0"
flate2 = { version = "1.0.27", optional = true }
quinn-proto = "0.10.6"

[dev-dependencies]
env_logger.workspace = true
gmt_dos-actors.workspace = true
gmt_dos-clients.workspace = true
tokio-test = "0.4.4"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[features]
insecure = ["rustls/dangerous_configuration"]
