[package]
name = "gmt_dos-clients_windloads"
version = "2.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS Windloads Client"
documentation = "https://docs.rs/gmt_dos-clients_windloads"
readme = "../README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
gmt_dos-actors.workspace = true
gmt_dos-clients = { workspace = true, features = ["interface"] }
gmt_dos-clients_io = { workspace = true }
log.workspace = true
thiserror = { workspace = true }
geotrans = "0.2.2"
gmt-fem = { workspace = true }
parse-monitors = "0.2.3"
nalgebra.workspace = true

[dev-dependencies]
anyhow.workspace = true
env_logger.workspace = true
gmt_dos-clients = { workspace = true, features = ["clients"] }
gmt_dos-clients_arrow.workspace = true
gmt_dos-clients_fem = { workspace = true }
gmt_dos-clients_mount = { workspace = true, features = ["mount-fdr"] }
gmt_dos-clients_m1-ctrl = { workspace = true, features = ["serde"] }
indicatif.workspace = true
skyangle.workspace = true
tokio = { workspace = true, features = ["full"] }
