[package]
name = "gmt_dos-clients_windloads"
version = "3.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS Windloads Client"
documentation = "https://docs.rs/gmt_dos-clients_windloads"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
gmt_dos-actors = { workspace = true, features = ["filing"] }
interface = { workspace = true, features = ["filing"] }
gmt_dos-clients_io.workspace = true
log.workspace = true
thiserror = { workspace = true }
geotrans = "0.2.2"
gmt-fem = { workspace = true }
parse-monitors = "0.2.4"
nalgebra.workspace = true
serde.workspace = true
gmt_dos-clients = { workspace = true, features = ["serde"] }

[dev-dependencies]
anyhow.workspace = true
env_logger.workspace = true
gmt_dos-clients = { workspace = true, features = ["nalgebra"] }
gmt_dos-clients_arrow.workspace = true
gmt_dos-clients_fem = { workspace = true }
gmt_dos-clients_m1-ctrl = { workspace = true, features = ["serde"] }
gmt_dos-clients_mount.workspace = true
indicatif.workspace = true
skyangle.workspace = true
tokio = { workspace = true, features = ["full"] }
