[package]
name = "active-optics"
version = "0.1.0"
edition = "2021"

[dependencies]
crseo.workspace = true
gmt_dos-actors.workspace = true
gmt_dos-clients = { workspace = true, features = ["matio-rs"] }
gmt_dos-clients_io.workspace = true
gmt_dos-clients_crseo.workspace = true
gmt_dos-clients_arrow.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
env_logger.workspace = true
complot = "0.3.3"
num-traits = "0.2.15"
ngao = { version = "0.1.0", path = "../ngao" }
skyangle.workspace = true
matio-rs = { workspace = true, features = ["nalgebra"] }
log.workspace = true
nalgebra.workspace = true
nanorand.workspace = true
serde-pickle = "1.1.1"
